src/tests/testfiles/binary-operators/types-22.txt
Error at 2:5: Binary operator operands must have the same type (have char[] and float)
"a" % 4.0;
^
